# Dashboard

./: .gitignore  CLAUDE.md  Home.py  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  utils.py
.streamlit/: config.toml  pages.toml
app_pages/: 1_Overview.py  2_RFM_Segmentation.py  3_Churn_Prediction.py  4_CLV_Prediction.py  5_Revenue_Forecasting.py
pages/: 1_Overview.py  2_RFM_Segmentation.py  3_Churn_Prediction.py  3_Cohort_Retention.py  4_CLV_Prediction.py  5_Revenue_Forecasting.py
utils/: __init__.py  clustering.py  data.py  theme.py  transforms.py  ui.py
