[project]
name = "Dashboard"
version = "0.1.1"
description = "RFM/CLV Dashboard in Streamlit"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "numpy>=2.4.4",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "pymc-marketing>=0.19.4",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "statsmodels>=0.14.6",
    "streamlit>=1.57.0",
    "watchdog>=6.0.0",
]

[project.urls]
Repository = "https://github.com/jordanc1989/Dashboard"
